[major changes] Rework groups+dataplane to handle external/underlay/bifurcated replication
Includes:

* Major updates to handle different cases for multicast replication and internal,
  Geneve (encapsulated) traffic as a whole.
* Introduces parsing/checking on a new Geneve option with mcast_tag (0, 1, 2) that
  needs to integrate with OPTE.
* Egress tables added to better handle decapped or not outgoing packets and MAC rewriting.
* Introduces a range-based port bitmap for matching on egress ports in order to decap or not.
* Additional testing for these scenarios
